test/deca/context/valid/difference.deca
{
    int x = 4 - 6;
}