test/deca/context/invalid/not_error.deca
// Description:
//   not int
//
// Résultat :
// mauvaise syntaxe

{
    boolean b = !4;
}
